created the nav bar and first section of page

--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Landing Page</title>
 </head>
 <body>
-    <h1>This will be the landing page</h1>
+    <nav>
+        <img src="/Users/sahmed46/repos/odin-landing-page/images/google-logo-9808.png">
+        <ul>
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link one</a></li>
+        </ul>
+    </nav>
+    <div class="section-one">
+        <div class="left-side">
+            <h1>This website is awesome</h1>
+            <div>The website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <button>Sign up</button>
+        </div>
+        <div class="right-side">
+            <div id="placeholder">This is a placeholder for an image</div>
+        </div>
+    </div>
+    <div class="section-two">
+
+    </div>
+    <div class="section-three">
+
+    </div>
+    <div class="section-four">
+
+    </div>
+    <footer>
+
+    </footer>
 </body>
 </html>
