Completed every section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <img src="/Users/sahmed46/repos/odin-landing-page/images/google-logo-9808.png">
+        <div class="header-logo">Header Logo</div>
         <ul>
             <li><a href="">header link one</a></li>
             <li><a href="">header link one</a></li>
@@ -19,23 +19,53 @@
         <div class="left-side">
             <h1>This website is awesome</h1>
             <div>The website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <button>Sign up</button>
+            <button><a href="">Sign up</a></button>
         </div>
         <div class="right-side">
             <div id="placeholder">This is a placeholder for an image</div>
         </div>
     </div>
     <div class="section-two">
+        <div class="box-title">Some random information.</div>
 
+        <div class="box-container">
+            <div class="boxes">
+                <div class="box"></div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="boxes">
+                <div class="box"></div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="boxes">
+                <div class="box"></div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="boxes">
+                <div class="box"></div>
+                <div class="caption">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
     </div>
     <div class="section-three">
-
+        <div class="text-quote">
+            <div class="quote">This is an insipiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="author">-Thor, God of Thunder</div>
+        </div>
     </div>
     <div class="section-four">
-
+        <div class="action-content">
+            <div class="action-left-side">
+                <div class="action-text">Call to action! It's time!</div>
+                <div class="signup-text">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="action-right-side">
+                <button><a href="">Sign up</a></button>
+            </div>
+        </div>
     </div>
     <footer>
-
+        <div>Copyright © The Odin Project 2021</div>
     </footer>
 </body>
 </html>
